Fixed sticky footer covering content

--- a/public/css/main_styles.css
+++ b/public/css/main_styles.css
@@ -8,7 +8,10 @@
 body {
   margin-left: 2%;
   margin-right: 2%;
-  margin-top: 70px;
+  margin-top: 55px;
+  min-height: 400px;
+  margin-bottom: 56px;
+  clear: both;
 }
 
 
